28

* #1996: Rename to "Browse". (marco)

27

* Make it startup again. (marco)

26

* Add brazilian translation. (DiegoZacarao)

25

* Arabian translation