@@ -1,3 +1,5 @@
+* #2718: Make the library the browser homepage. (marco)
+
 28
 
 * #1996: Rename to "Browse". (marco)
